--- a/package.json
+++ b/package.json
@@ -1,15 +1,71 @@
 {
-  "name": "address_book",
+  "name": "pure-platform-portal",
   "private": true,
   "dependencies": {
+    "@babel/preset-react": "^7.14.5",
+    "@material-ui/core": "^4.11.4",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.60",
+    "@material-ui/pickers": "^3.3.10",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
+    "@rails/webpacker": "^6.0.0-rc.5",
+    "babel-plugin-macros": "^3.1.0",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
+    "cross-fetch": "^3.1.4",
+    "immutability-helper": "^3.1.1",
+    "jquery": "^3.6.0",
+    "material-table": "^1.69.3",
+    "moment": "^2.29.1",
+    "notistack": "^1.0.10",
+    "prop-types": "^15.7.2",
+    "react": "^17.0.2",
+    "react-barcode": "^1.4.1",
+    "react-beautiful-dnd": "^13.1.0",
+    "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0",
+    "react-idle-timer": "^4.6.4",
+    "react-input-mask": "^2.0.4",
+    "react-numeric-input": "^2.2.3",
+    "react-pro-sidebar": "^0.6.0",
+    "react-router-dom": "^5.2.0",
+    "react-select": "^4.3.1",
+    "react-to-print": "^2.14.4",
+    "react_ujs": "^2.6.1",
     "turbolinks": "^5.2.0",
-    "webpack": "^4.0.0"
+    "webpack": "^5.51.1",
+    "webpack-cli": "^4.8.0"
   },
   "version": "0.1.0",
   "devDependencies": {
-    "webpack-dev-server": "^4.11.1"
-  }
+    "@webpack-cli/serve": "^1.6.0",
+    "webpack-dev-server": "^4.3.1"
+  },
+  "babel": {
+    "plugins": [
+      "@babel/plugin-syntax-dynamic-import",
+      [
+        "@babel/plugin-proposal-class-properties",
+        {
+          "loose": true
+        }
+      ],
+      [
+        "@babel/plugin-proposal-private-methods",
+        {
+          "loose": true
+        }
+      ],
+      [
+        "@babel/plugin-proposal-private-property-in-object",
+        {
+          "loose": true
+        }
+      ]
+    ]
+  },
+  "browserslist": [
+    "defaults"
+  ]
 }
