--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "pure-platform-portal",
   "private": true,
   "dependencies": {
-    "@babel/preset-react": "^7.14.5",
+    "@babel/preset-react": "^7.18.6",
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
@@ -10,7 +10,7 @@
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
-    "@rails/webpacker": "^6.0.0-rc.5",
+    "@rails/webpacker": "5.4.3",
     "babel-plugin-macros": "^3.1.0",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "cross-fetch": "^3.1.4",
@@ -19,11 +19,11 @@
     "material-table": "^1.69.3",
     "moment": "^2.29.1",
     "notistack": "^1.0.10",
-    "prop-types": "^15.7.2",
-    "react": "^17.0.2",
+    "prop-types": "^15.8.1",
+    "react": "^18.2.0",
     "react-barcode": "^1.4.1",
     "react-beautiful-dnd": "^13.1.0",
-    "react-dom": "^17.0.2",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.2.0",
     "react-idle-timer": "^4.6.4",
     "react-input-mask": "^2.0.4",
@@ -32,15 +32,15 @@
     "react-router-dom": "^5.2.0",
     "react-select": "^4.3.1",
     "react-to-print": "^2.14.4",
-    "react_ujs": "^2.6.1",
+    "react_ujs": "^2.6.2",
     "turbolinks": "^5.2.0",
-    "webpack": "^5.51.1",
-    "webpack-cli": "^4.8.0"
+    "webpack": "^4.46.0",
+    "webpack-cli": "^3.3.12"
   },
   "version": "0.1.0",
   "devDependencies": {
     "@webpack-cli/serve": "^1.6.0",
-    "webpack-dev-server": "^4.3.1"
+    "webpack-dev-server": "^3"
   },
   "babel": {
     "plugins": [
